chore(java): use java 25 features